# pib-Augen

./: README.md  package.xml  setup.cfg  setup.py
config/: eyes_display.yaml
eyes_display/: camera_bridge_node.py  depthai_face_tracker_node.py  eyes_node.py  face_tracker_node.py  mock_publisher.py
launch/: eyes_display.launch.py  eyes_display_depthai.launch.py
resource/: eyes_display
scripts/: augen.py  facedetector.py  facedetector_einfach.py  run_eyes_display.sh  setup_eyes_display.sh  standalone_depthai_eyes.py
